[tool.poetry]
name = "findmy"
version = "0.1.0"
description = ""
authors = ["Yoshiaki Kawazu <kawazzz@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pyicloud = "^0.10.2"
jsonpickle = "^2.0.0"
Pygments = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
